@@ -56,6 +56,9 @@ class StateEscape(State.State):
     def on_draw_2d_pre():
         pyglet.gl.glClearColor(0.5, 0.69, 1.0, 1)
 
+    def on_activate(self):
+        G.world.savefile.save_world()
+
 
 escape = None
 
