@@ -1,0 +1,26 @@
+import event.Registry
+import mod.ModMcpython
+
+
+class IDataSerializer(event.Registry.IRegistryContent):
+    TYPE = "minecraft:data_serializer"
+    PART = None  # which part it can serialize
+
+    @classmethod
+    def load(cls, savefile, **kwargs):
+        raise NotImplementedError()
+
+    @classmethod
+    def save(cls, data, savefile, **kwargs):
+        raise NotImplementedError()
+
+
+dataserializerregistry = event.Registry.Registry("dataserializer", ["minecraft:data_serializer"])
+
+
+def load():
+    import storage.serializer.General
+
+
+mod.ModMcpython.mcpython.eventbus.subscribe("stage:serializer:parts", load)
+
