@@ -888,4 +888,12 @@ started these clone on 12th of July, 2019
 [uuk]: improved rendering performance by caching the texture data
 [uuk]: removed log message when an chunk is finished in StateGeneration
 [uuk]: implemented rendering improvements also to direct-draw functions of BoxModel
+[uuk]: added SaveFile, IDataFixer and IDataSerializer-class
+
+plans for this branch:
+    - implement an save system
+
+    - implement an mc-file converter
+
+    - implement save screen
 
